--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <main>
+      <div class="column_1">sub_column</div>
+      <div class="column_2"><%= yield %></div>
+    </main>
   </body>
 </html>
