--- a/chatapp/app/views/home/index.html.erb
+++ b/chatapp/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
 <h1>どうも<h1>
+<%= link_to("HOME", "/")%>
+<%= link_to("ROOMS", "/rooms")%>
+<%= link_to("SETTINGS", "/settings")%>
+<%= link_to("CONTACT", "/contact")%>
