--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
   </head>
 
   <body>
-    <main>
-      <div class="column_1">sub_column</div>
-      <div class="column_2"><%= yield %></div>
+    <div class="container">
+      <div class="sidebar">sub_column</div>
+      <div class="content"><%= yield %></div>
     </main>
   </body>
 </html>
