--- a/chatapp/app/views/home/index.html.erb
+++ b/chatapp/app/views/home/index.html.erb
@@ -1,1 +1,10 @@
-asdfsrerearge
+<html>
+    <head>
+        <body>
+            asdfsrerearge
+
+            <%= @rooms %>
+            
+        </body>
+    </head>
+</html>
