solve no display data issue

--- a/chatapp/app/views/home/index.html.erb
+++ b/chatapp/app/views/home/index.html.erb
@@ -1,10 +1,14 @@
 <html>
     <head>
+    </head>
         <body>
             asdfsrerearge
 
-            <%= @rooms %>
-            
+            <% @rooms.each do |room| %>
+                <%= room.name %>
+                <br>
+                <%= room.describe %>
+            <% end %>        
         </body>
-    </head>
+    
 </html>
