--- a/chatapp/app/assets/stylesheets/home.css
+++ b/chatapp/app/assets/stylesheets/home.css
@@ -1,3 +1,19 @@
-.column_1{
-    background-color: aqua;
+*{
+margin:0;
+padding:0;
+}
+
+.sidebar {
+  background: #2e2e2e;
+  float: left;
+  position: fixed;
+  height: 100vh;
+  width: 300px;
+}
+
+.content {
+  background: #3c3d3d;
+  float: left;
+  height: 100vh;
+  width: 100%;
 }
