--- a/chatapp/app/views/room/new.html.erb
+++ b/chatapp/app/views/room/new.html.erb
@@ -1,9 +1,12 @@
 #room create page
 
 <h1>新規作成</h1>
-<%= form_tag("/room/new" , {multipart: true}) do %>
+<%= form_tag("/room/create" , {multipart: true}) do %>
 room名 <input name="name">
 roomの詳細 <input name="describe">
 <br>
 <input type="submit" value="新規作成">
 <% end %>
+
+<%= link_to "戻る", "/room"%>
+<%= link_to "ホームに戻る", "/"%>
