--- a/chatapp/app/assets/stylesheets/home.css
+++ b/chatapp/app/assets/stylesheets/home.css
@@ -1,6 +1,12 @@
 *{
 margin:0;
 padding:0;
+color:rgb(230, 230, 230)
+}
+
+a{
+  display: block;
+  font-size: 50px;
 }
 
 .sidebar {
@@ -9,6 +15,7 @@ padding:0;
   position: fixed;
   height: 100vh;
   width: 300px;
+  text-align:  center;
 }
 
 .content {
