--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -14,8 +14,13 @@
 
   <body>
     <div class="container">
-      <div class="sidebar">sub_column</div>
+      <div class="sidebar">
+        <div class="user">ユーザー情報</div>
+        <div class="menu">
+          <a>Rooms</a>
+          <a>Contact</a>
+        </div>
+      </div>
       <div class="content"><%= yield %></div>
-    </main>
   </body>
 </html>
