--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -3,3 +3,9 @@
     <%= message.sentence %>
   <% end %>
 <% end %>
+
+#メッセージ作成
+<%= form_tag("/message/#{@room.id}" , {multipart: true}) do %>
+  <input name="sentence">
+  <input type="submit" value="送信">
+<% end %>
