--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,5 +1,5 @@
 <% @rooms.each do |room| %>
-<%= link_to "/room#{room.id}" do %>
+<%= link_to "/room/#{room.id}" do %>
 <%= room.name %>
 <% end %>
 <% end %>
