--- a/chatapp/app/assets/stylesheets/application.css
+++ b/chatapp/app/assets/stylesheets/application.css
@@ -13,3 +13,30 @@
  *= require_tree .
  *= require_self
  */
+
+ *{
+  margin:0;
+  padding:0;
+  color:rgb(230, 230, 230)
+}
+
+a{
+  display: block;
+  font-size: 50px;
+}
+
+.sidebar {
+  background: #2e2e2e;
+  float: left;
+  position: fixed;
+  height: 100vh;
+  width: 300px;
+  text-align:  center;
+}
+
+.content {
+  background: #3c3d3d;
+  float: left;
+  height: 100vh;
+  width: 100%;
+}
