--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -1,6 +1,13 @@
 <% if @messages != nil %>
   <% @messages.each do |message| %>
     <%= message.sentence %>
+    <% if message.created_at > 1.days.ago %>
+    <% puts "昨日" %>
+    <% elsif message.created_at > 2.days.ago %>
+    <% message.created_at.strftime("%Y/%m/%d") %>
+    <% elsif message.created_at == Time.current %>
+    <%= message.created_at.strftime("%H:%M") %>
+    <% end %>
   <% end %>
 <% end %>
 
