--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -2,15 +2,12 @@
   <% @messages.each do |message| %>
     <%= message.sentence %>
     <% if message.created_at > 1.days.ago %>
-    <% puts "昨日" %>
-    <% elsif message.created_at > 2.days.ago %>
-    <% message.created_at.strftime("%Y/%m/%d") %>
-    <% elsif message.created_at == Time.current %>
-    <%= message.created_at.strftime("%H:%M") %>
+     今日<%= message.created_at.strftime("%H:%M") %>
+    <% else %>
+     <%= message.created_at.strftime("%Y/%m/%d") %>
     <% end %>
   <% end %>
 <% end %>
-
 #メッセージ作成
 <%= form_tag("/message/#{@room.id}" , {multipart: true}) do %>
   <input name="sentence">
