--- a/chatapp/app/assets/stylesheets/application.css
+++ b/chatapp/app/assets/stylesheets/application.css
@@ -13,3 +13,30 @@
  *= require_tree .
  *= require_self
  */
+ 
+ *{
+  margin:0;
+  padding:0;
+}
+
+.container{
+  display: flex;
+}
+    
+    
+.sidebar {
+  background: #2e2e2e;
+  position: fixed;
+  height: 100vh;
+  width: 300px;
+}
+    
+.content {
+  background: #3c3d3d;
+  height: 100vh;
+  width: 100%;
+  margin-left: 300px;
+  padding: 30px 0px 0px 30px;
+}
+    
+    
