--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -1,4 +1,5 @@
 <% if @messages != nil %>
+  <div class = "message">
   <% @messages.each do |message| %>
     <%= message.sentence %>
     <% if message.created_at > 1.days.ago %>
@@ -7,7 +8,9 @@
      <%= message.created_at.strftime("%Y/%m/%d") %>
     <% end %>
   <% end %>
+  </div>
 <% end %>
+
 #メッセージ作成
 <%= form_tag("/message/#{@room.id}" , {multipart: true}) do %>
   <input name="sentence">
