--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -9,3 +9,5 @@
   <input name="sentence">
   <input type="submit" value="送信">
 <% end %>
+
+<%= link_to "削除","/room/destroy/#{@room.id}",data: { turbo_method: :delete } %>
