--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -14,8 +14,13 @@
 
   <body>
     <div class="container">
-      <div class="sidebar">sub_column</div>
+      <div class="sidebar">
+        <div class="users">
+          <img class="user_icon" src="/test_icon.png">
+          <div class="user_name">ちよのぶ ノブ</div>
+        </div>
+      </div>
       <div class="content"><%= yield %></div>
-    </main>
+    </div>
   </body>
 </html>
