--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -19,4 +19,6 @@
   <input type="submit" value="送信">
 <% end %>
 
+<%= link_to "削除","/room/delete/#{@room.id}",data: { turbo_method: :delete} %>
+
 <%= link_to("戻る", "/room") %>
