--- a/chatapp/app/views/room/new.html.erb
+++ b/chatapp/app/views/room/new.html.erb
@@ -5,6 +5,7 @@
 <p id="alert"><%= alert %></p>
 room名 <input name="name">
 roomの詳細 <input name="describe">
+アイコン選択<input type="file" name="image">
 <br>
 <input type="submit" value="新規作成">
 <% end %>
