edit room image

--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,5 +1,6 @@
 <% @rooms.each do |room| %>
 <%= link_to "/room/#{room.id}" do %>
+<img src = "/room_image/<%= room.image %> ">
 <%= room.name %>
 <% end %>
 <% end %>
