--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,6 +1,6 @@
 <% @rooms.each do |room| %>
 <%= link_to "/room/#{room.id}" do %>
-<img src = "/room_image/<%= room.image %> ">
+<img src = "/room_image/<%= room.image %> " width=50px height=50px>
 <%= room.name %>
 <% end %>
 <% end %>
