--- a/chatapp/app/views/room/new.html.erb
+++ b/chatapp/app/views/room/new.html.erb
@@ -1,7 +1,7 @@
 #room create page
 
 <h1>新規作成</h1>
-<%= form_tag("/room/new" , {multipart: true}) do %>
+<%= form_tag("/room/create" , {multipart: true}) do %>
 <p id="alert"><%= alert %></p>
 room名 <input name="name">
 roomの詳細 <input name="describe">
