--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,6 +1,10 @@
 <% @rooms.each do |room| %>
 <%= link_to "/room/#{room.id}" do %>
+<% if room.image%>
 <img src = "/room_image/<%= room.image %> " width=50px height=50px>  <%# サイズ指定は仮 %>
+<% else %>
+<img src= "/room_image/default.png" width=50px height=50px>
+<% end %>
 <%= room.name %>
 <% end %>
 <% end %>
