--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,9 +1,9 @@
 <% @rooms.each do |room| %>
 <%= link_to "/room/#{room.id}" do %>
-<% if room.image%>
-<img src = "/room_image/<%= room.image %> " width=50px height=50px>  <%# サイズ指定は仮 %>
+<% if room.image.length >= 1%>
+<img src = "<%= room.image %> " width=50px height=50px>  <%# サイズ指定は仮 %>
 <% else %>
-<img src= "/room_image/default.png" width=50px height=50px>
+<img src = "/room_image/default.png" width=50px height=50px>
 <% end %>
 <%= room.name %>
 <% end %>
