delete public uploads

--- a/chatapp/app/views/room/new.html.erb
+++ b/chatapp/app/views/room/new.html.erb
@@ -1,13 +1,14 @@
 #room create page
 
 <h1>新規作成</h1>
+
 <%= form_tag("/room/create" , {multipart: true}) do %>
-<p id="alert"><%= alert %></p>
 room名 <input name="name">
 roomの詳細 <input name="describe">
 アイコン選択<input type="file" name="image">
 <br>
 <input type="submit" value="新規作成">
+<%= flash[:alert] %>
 <% end %>
 
 <%= link_to "戻る", "/room" %>
