create delete channel

--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -8,6 +8,7 @@
        <% else %>
          <%= message.created_at.strftime("%Y/%m/%d") %>
        <% end %>
+       <button id="<%=message.id%>" class="delete-btn">削除</button>
      </div>
     <% end %>
   <% end %>
