--- a/chatapp/app/views/room/new.html.erb
+++ b/chatapp/app/views/room/new.html.erb
@@ -9,6 +9,7 @@ roomの詳細 <input name="describe">
 <br>
 <input type="submit" value="新規作成">
 <%= flash[:alert] %>
+<%# flash[:alert2] %>
 <% end %>
 
 <%= link_to "戻る", "/room" %>
