これもスペース調整

--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <div class="sidebar">
         <div class="users">
           <img class="user_icon" src="/test_icon.png">
-          <div class="user_name">ちよのぶ ノブ</div>
+          <div class="user_name">ちよ ノブ</div>
         </div>
       </div>
       <div class="content"><%= yield %></div>
