edit for date bug

--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -2,6 +2,8 @@
   <% if @messages != nil %>
     <% @messages.reverse_each do |message| %>
       <p><%= message.sentence %></p>
+      <%#= 1.days.ago %>
+      <%#= message.created_at %>
       <div id="message-time">
         <% if message.created_at > 1.days.ago %>
           今日<%= message.created_at.strftime("%H:%M") %>
