add room count and sample user count

--- a/chatapp/app/views/home/index.html.erb
+++ b/chatapp/app/views/home/index.html.erb
@@ -1,9 +1,14 @@
-asdfsrerearge
+<h1>kbc-chat</h1>
+<br>
+現在のルーム数 ： <%= @room_length %>
+<br>
+オンラインのユーザー数 ： <%#=%>
 <br>
 <% @rooms.each do |room| %>
   <%= room.name %>
   <br>
   <%= room.describe %>
 <% end %> 
+
 
 <%= link_to "ルーム一覧", "/room" %>
