add room name chat room

--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -1,3 +1,5 @@
+<h3># <%= @room.name %> </h3>
+<br>
 <div id="messages">
   <% if @messages != nil %>
     <% @messages.reverse_each do |message| %>
