--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,9 +1,16 @@
-<% @rooms.each do |room| %>
-  <%= link_to "/room/#{room.id}" do %>
-    <%= room.name %>
+<div class="room_button">
+  <div class="create_room">
+    <%= link_to "ルーム新規作成", "/room/new" %>
+  </div>
+  <div class="back_button">
+    <%= link_to "戻る", "/" %>
+  </div>
+</div>
+
+<div class="rooms">
+  <% @rooms.each do |room| %>
+    <%= link_to "/room/#{room.id}" do %>
+      <%= room.name %>
+    <% end %>
   <% end %>
-<% end %>
-
-
-<%= link_to "ルーム新規作成", "/room/new" %>
-<%= link_to "戻る", "/" %>
+</div>
