--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,6 +1,7 @@
+<h1>ROOM</h1>
 <div class="room_button">
   <div class="create_room">
-    <%= link_to "ルーム新規作成", "/room/new" %>
+    <%= link_to "新規作成", "/room/new" %>
   </div>
   <div class="back_button">
     <%= link_to "戻る", "/" %>
