--- a/chatapp/app/assets/stylesheets/room.css
+++ b/chatapp/app/assets/stylesheets/room.css
@@ -1,4 +1,5 @@
 h1{
+  font-size: 2.8rem;
   display: inline-block;
   background: linear-gradient(90deg, #4963e6, #C850C0 30%, #FFCC70);
   background: -webkit-linear-gradient(0deg, #4963e6, #C850C0 30%, #FFCC70);
