--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
           <img class="user_icon" src="/test_icon.png">
           <div class="user_name">ちよ ノブ</div>
         </div>
+        <li><%= link_to "Home", "/" %></li>
+        <li><%= link_to "Room", "/room" %></li>
       </div>
       <div class="content"><%= yield %></div>
     </div>
