--- a/chatapp/app/assets/stylesheets/application.css
+++ b/chatapp/app/assets/stylesheets/application.css
@@ -31,8 +31,10 @@
   height: 100vh;
   width: 300px;
 }
+
 li{
   font-size: 25px;
+  list-style: none;
 }
 
 .content {
@@ -41,11 +43,6 @@ li{
   width: 100%;
   margin-left: 300px;
   padding: 30px 0px 0px 30px;
-}
-
-/* 仮 */
-a{
-  color: #fff;
 }
 
 /* ユーザー情報 */
