add create error & destroy error

--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -1,5 +1,5 @@
 <h1>ROOM</h1>
-
+<p id="notice"><%= notice %></p>
 <div class="room_button">
   <div class="back_button">
     <%= link_to("戻る", "/room") %>
