--- a/chatapp/app/views/room/new.html.erb
+++ b/chatapp/app/views/room/new.html.erb
@@ -5,12 +5,13 @@
   </div>
 </div>
 
-<h2>新規作成</h2>
-<%= form_tag("/room/create" , {multipart: true}) do %>
-<p id="alert"><%= alert %></p>
-room名 <input name="name">
-roomの詳細 <input name="describe">
-アイコン選択<input type="file" name="image">
-<br>
-<input type="submit" value="新規作成">
+<h1>新規作成</h1>
+<%= form_with url: room_create_path, model: @room, local: true do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <%= f.label :describe %>
+  <%= f.text_field :describe %>
+  <%= f.label :image %>
+  <%= f.file_field :image %>
+  <%= f.submit "登録する" %>
 <% end %>
