--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -15,7 +15,7 @@
         <% if room.image.length >= 1%>
           <img src = "<%= room.image %> " width=50px height=50px>  <%# サイズ指定は仮 %>
         <% else %>
-          <img src = "/room_image/default.png" width=50px height=50px>
+          <img src = "/room_image/default.png">
         <% end %>
         <%= room.name %>
       <% end %>
