--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -13,7 +13,7 @@
     <div class="rooms_name">
       <%= link_to "/room/#{room.id}" do %>
         <% if room.image.length >= 1%>
-          <img src = "<%= room.image %> " width=50px height=50px>  <%# サイズ指定は仮 %>
+          <img src = "<%= room.image %> ">
         <% else %>
           <img src = "/room_image/default.png">
         <% end %>
