--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -19,7 +19,7 @@
         <div id="message-time">
           <% if message.created_at >= Date.today.beginning_of_day %>
             今日<%= message.created_at.strftime("%H:%M") %>
-          <% elsif message.created_at <= Date.today.beginning_of_day && message.created_at >= Date.yesterday.beginning_of_day%>
+          <% elsif message.created_at < Date.today.beginning_of_day && message.created_at >= Date.yesterday.beginning_of_day%>
             昨日<%= message.created_at.strftime("%H:%M") %>
           <% else %>
             <%= message.created_at.strftime("%Y/%m/%d") %>
