--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -115,9 +115,10 @@
   transition: 0.5s;
 }
 
-.room_content{
+.room-content{
   width: 100%;
-  padding: 20px 0px 0px 10px;
+  padding: 20px 0px 100px 20px;
+  margin-top: 55px;
 }
 
 .room_button{
