--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -13,7 +13,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="room_content">
+<div class="room-content">
 
 <div id="messages">
   <% if @messages != nil %>
