--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -11,6 +11,8 @@
           <div class="room-image">
             <% if room.image.length > 0 %>
               <img src = "<%= room.image %>" class="room-image">
+            <% else %>
+              <img src = "/room_image/default.png" class="room-image">
             <% end %>
           </div>
           <%= room.name %>
