--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -43,10 +43,14 @@
   }
 }
 
-.content-title{
-  font-size: 25px;
-  color: #2e2e2e;
-  margin: 10px 0px 10px 10px;
+.content-column{
+  display: flex;
+  margin-bottom: 20px;
+  .title{
+    font-size: 25px;
+    color: #2e2e2e;
+    margin: 10px 0px 10px 10px;
+  }
 }
 
 
@@ -54,6 +58,7 @@
   margin-left: 10px;
   .room{
     display: flex;
+    margin-bottom: 15px;
     .room-image{
       widows: 50px;
       height: 50px;
