change form type

--- a/chatapp/app/views/room/new_room.html.erb
+++ b/chatapp/app/views/room/new_room.html.erb
@@ -11,7 +11,7 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :describe %>
-  <%= f.text_field :describe %>
+  <%= f.text_area :describe %>
   <%= f.label :image %>
   <%= f.file_field :image %>
   <%= f.submit "登録する" %>
