--- a/chatapp/app/views/room/new_room.html.erb
+++ b/chatapp/app/views/room/new_room.html.erb
@@ -9,7 +9,7 @@
 <%= form_with url: create_room_path, model: @room, local: true do |f| %>
   <%= render "error_messages", model: @room %>
   <%= f.label :category %>
-  <%= f.select :category, [["Q&A", "Q&A"], ["募集", "募集"], ["雑談", "雑談"], ["プログラミング", "プログラミング"], ["OS", "OS"]], include_blank: "選択して下さい"%>
+  <%= f.select :category, [["Q&A", "Q&A"], ["募集", "募集"], ["雑談", "雑談"], ["プログラミング", "プログラミング"], ["OS", "OS"], ["クラウド", "クラウド"]], include_blank: "選択して下さい"%>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :describe %>
