--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -62,9 +62,9 @@ body{
     margin-left: 5px;
     .menu-one{
       font-size: 19px;
-      margin-bottom: 10px;
-      display: inline-block;
+      display: block;
       padding: 5px 10px;
+      margin:6px 5px;
     }
     .menu-one:hover{
       background-color: #F4F4F4;
