--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,5 +1,8 @@
 <div class="search-area">
-  <input type="search" placeholder="キーワードを入力してルームを検索">
+  <%= search_form_for @q, url: room_search_path do |f| %>
+    <%= f.search_field :name_cont, placeholder: "キーワードを入力してルームを検索"  %>
+    <% f.submit '検索' %>
+  <% end %>
 </div>
 
 <div class="content-column">
