--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -18,6 +18,7 @@
 <div id="messages">
   <% if @messages != nil %>
     <% @messages.reverse_each do |message| %>
+      <div class="message-single">
       <div id="message-<%= message.id%>">
         <p><%= safe_join(message.sentence.split("\n"),tag(:br)) %></p>
         <div id="message-time">
@@ -32,6 +33,7 @@
         <div id="message-delete">
           <%= link_to "削除する", destroy_message_path(message.id), data: {turbo_method: :delete} %>
         </div>
+      </div>
       </div>
     <% end %>
   <% end %>
