--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -183,12 +183,18 @@
 
 .message-single{
   font-size: 24px;
-}
 
-#message-time{
-  font-size: 14px;
-}
+  .chat-username{
+    font-size: 20px;
+    color: rgb(179, 2, 164);
+  }
 
-#message-delete{
-  font-size: 11px;
+  #message-time{
+    font-size: 14px;
+  }
+
+  #message-delete{
+    font-size: 11px;
+  }
+
 }
