--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -19,22 +19,23 @@
   <% if @messages != nil %>
     <% @messages.reverse_each do |message| %>
       <div class="message-single">
-      <div id="message-<%= message.id%>">
-        <p><%= safe_join(message.sentence.split("\n"),tag(:br)) %></p>
-        <div id="message-time">
-          <% if message.created_at >= Date.today.beginning_of_day %>
-            今日<%= message.created_at.strftime("%H:%M") %>
-          <% elsif message.created_at < Date.today.beginning_of_day && message.created_at >= Date.yesterday.beginning_of_day%>
-            昨日<%= message.created_at.strftime("%H:%M") %>
-          <% else %>
-            <%= message.created_at.strftime("%Y/%m/%d") %>
-          <% end %>
+        <div id="message-<%= message.id%>">
+          <div class="chat-username">山口 一郎</div>
+            <p><%= safe_join(message.sentence.split("\n"),tag(:br)) %></p>
+            <div id="message-time">
+              <% if message.created_at >= Date.today.beginning_of_day %>
+                今日<%= message.created_at.strftime("%H:%M") %>
+              <% elsif message.created_at < Date.today.beginning_of_day && message.created_at >= Date.yesterday.beginning_of_day%>
+                昨日<%= message.created_at.strftime("%H:%M") %>
+              <% else %>
+                <%= message.created_at.strftime("%Y/%m/%d") %>
+              <% end %>
+            </div>
+            <div id="message-delete">
+              <%= link_to "削除する", destroy_message_path(message.id), data: {turbo_method: :delete} %>
+            </div>
+          </div>
         </div>
-        <div id="message-delete">
-          <%= link_to "削除する", destroy_message_path(message.id), data: {turbo_method: :delete} %>
-        </div>
-      </div>
-      </div>
     <% end %>
   <% end %>
 </div>
