--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -13,7 +13,9 @@
  *= require_tree .
  *= require_self
  */
-
+ @import "jquery-ui/autocomplete";
+ @import "jquery-ui/theme";
+ @import "jquery-ui/menu";
 
 
  /* 共通処理 */
