--- a/chatapp/app/views/room/_form.html.erb
+++ b/chatapp/app/views/room/_form.html.erb
@@ -33,9 +33,7 @@ $(function() {
     }
     $("#room_category").autocomplete({
       source: dataList,
-      autoFocus: true, 
-      delay: 300,
-      minLength: 1
+      autoFocus: true
     });
 });
 </script>
