--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
   padding:0;
   color:#232323; /* default color */
   text-decoration: none;
+  font-weight: bolder;
 }
 
 li{
@@ -64,7 +65,7 @@ body{
       font-size: 19px;
       margin-bottom: 10px;
       display: inline-block;
-      padding: 5px 10px;
+      padding: 7px 10px;
     }
     .menu-one:hover{
       background-color: #F4F4F4;
@@ -116,6 +117,6 @@ body{
         90%  {color: #43d8ae;}
         100% {color: #10bc8a;}
       }
-   }
+  }
   } 
 }
