--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -8,6 +8,11 @@
       <i class="fa-solid fa-caret-down"></i>
     <% end %>
   </div>
+  <div class="room_header_right">
+    <%= link_to edit_room_path(params[:id]) do %>
+      <i class="fa-solid fa-caret-down">編集</i>
+    <% end %>
+  </div>
 </div>
 
 
